--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -1,7 +1,7 @@
 <!DOCTYPE html>
 <html>
 <head>
-  <title>Karate</title>
+  <title>Sports Competitions</title>
   <%= stylesheet_link_tag 'application', media: 'all', 'data-turbolinks-track' => true %>
   <%= javascript_include_tag 'application', 'data-turbolinks-track' => true %>
   <%= csrf_meta_tags %>
@@ -13,10 +13,20 @@
 <!-- /main navbar -->
 
 <div class="container">
+  <% flash.each do |key, value| %>
+      <div class="alert alert-<%= key %>">
+        <%= value %>
+      </div>
+  <% end %>
+</div>
 
+<%= yield :top_content %>
+
+<div class="container">
+  <h1><%= yield :header %></h1>
   <%= yield %>
-
 </div>
 
 </body>
 </html>
+
