--- a/app/views/users/profile.html.erb
+++ b/app/views/users/profile.html.erb
@@ -1,2 +1,3 @@
 <h1>Users#profile</h1>
-<p>Find me in app/views/users/profile.html.erb</p>
+<p>Find me in app/views/users/profile.html.erb asdf </p>
+
