--- a/app/views/layouts/_main_navbar.html.erb
+++ b/app/views/layouts/_main_navbar.html.erb
@@ -7,6 +7,7 @@
     <div id="navbar">
       <ul class="nav navbar-nav">
         <li><%= link_to 'Home', root_path %></li>
+        <li><%= link_to 'Пользователи', users_path %></li>
       </ul>
       <ul class="nav navbar-nav pull-right">
         <% if user_signed_in? %>
@@ -16,7 +17,7 @@
                 <span class="caret"></span>
               </a>
               <ul class="dropdown-menu" role="menu">
-                <li><%= link_to 'Profile', edit_user_registration_path %></li>
+                <li><%= link_to 'Profile', user_path(current_user) %></li>
                 <li><%= link_to 'Log out', destroy_user_session_path, method: :delete %></li>
               </ul>
             </li>
