--- a/app/views/layouts/_main_navbar.html.erb
+++ b/app/views/layouts/_main_navbar.html.erb
@@ -18,6 +18,11 @@
               </a>
               <ul class="dropdown-menu" role="menu">
                 <li><%= link_to 'Profile', user_path(current_user) %></li>
+                <% if current_user.admin? %>
+                  <li><%= link_to 'Cities', cities_path %></li>
+                  <li><%= link_to 'Sports', sports_path %></li>
+                  <li><%= link_to 'Qualifications', qualifications_path %></li>
+                <% end %>
                 <li><%= link_to 'Log out', destroy_user_session_path, method: :delete %></li>
               </ul>
             </li>
