--- a/app/assets/stylesheets/users.scss
+++ b/app/assets/stylesheets/users.scss
@@ -6,3 +6,21 @@
     height: 51px;
   }
 }
+.profile-menu{
+
+  .profile-menu-link{
+    display: block;
+    width: 100%;
+    height: 100%;
+    text-align: center;
+    .fa{
+      font-size: 100px;
+    }
+    p{
+
+    }
+  }
+}
+.my-sportsmen{
+  display: none;
+}
