--- a/app/views/devise/registrations/edit.html.erb
+++ b/app/views/devise/registrations/edit.html.erb
@@ -9,28 +9,28 @@
     </div>
 
     <div class="form-group">
-      <%= f.label :birthday %><br />
-      <%= f.date_field :birthday, class: 'form-control' %>
-    </div>
-
-    <div class="form-group">
-      <%= f.label :sex %><br />
-      <%= f.text_field :sex, class: 'form-control'  %>
-    </div>
-
-    <div class="form-group">
-      <%= f.label :role %><br />
-      <%= f.text_field :role, class: 'form-control'  %>
-    </div>
-
-
-    <div class="form-group">
       <%= f.label :email %>
       <%= f.email_field :email, class: 'form-control' %>
       <% if devise_mapping.confirmable? && resource.pending_reconfirmation? %>
           <span class="label label-info">Currently waiting confirmation for: <%= resource.unconfirmed_email %></span>
       <% end %>
     </div>
+
+    <div class="form-group">
+      <%= f.label :birthday %><br />
+      <%= f.date_field :birthday, class: 'form-control' %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :sex %>
+      <%= f.select :sex , [[ "Male" ,'male'] , ["Female" , 'female' ]], { }, { :class => 'form-control' } %>
+    </div>
+
+    <div class="form-group">
+      <%= f.label :weight %>
+      <%= f.number_field :weight, class: 'form-control'  %>
+    </div>
+
 
     <div class="form-group">
       <%= f.label :password %>
