--- a/app/views/students/index.html.erb
+++ b/app/views/students/index.html.erb
@@ -1,6 +1,6 @@
 
-<h1>Тренеры</h1>
+<h1>Спортсмены</h1>
 
 <table class="table table-striped users-table">
-  <%= render @trainers %>
+  <%= render @students %>
 </table>
