--- a/app/views/trainers/show.html.erb
+++ b/app/views/trainers/show.html.erb
@@ -1,18 +1,36 @@
 <div class="user">
-  <div class="name"><h1><%= @user.name %></h1></div>
-  <div class="email"><%= @user.email %></div>
-
-  <% if @user == current_user and @user.trainer? %>
-    <%= link_to 'Edit', edit_user_registration_path %>
-  <% elsif @user.student and current_user.trainer? and @current_trainer.students.include?(@student) %>
-    <%= link_to 'Edit', edit_user_path %>
+  <% if @trainer.id == @current_trainer.id %>
+      <%= link_to 'Edit', edit_trainer_registration_path, class: 'btn btn-warning' %>
   <% end %>
 
-  <div>
-    <span class="text-warning"><%= 'Тренер' if @user.trainer? %></span>
-    <span class="text-success"><%= 'Спортсмен' if @user.student? %></span>
-  </div>
-  <div class="birthday"><%= @user.birthday %></div>
-
+  <table class="table">
+    <tr>
+      <td>Имя: </td>
+      <td class="name"><%= @trainer.name %></td>
+    </tr>
+    <tr>
+      <td>Email: </td>
+      <td class="name"><%= @trainer.email %></td>
+    </tr>
+    <tr>
+      <td>Кто: </td>
+      <td>
+        <span class="text-warning"><%= 'Тренер' if @trainer.trainer? %></span>
+        <span class="text-success"><%= 'Спортсмен' if @trainer.student? %></span>
+      </td>
+    </tr>
+    <tr>
+      <td>Пол: </td>
+      <td><%= @trainer.sex %></td>
+    </tr>
+    <tr>
+      <td>Дата рождения: </td>
+      <td class="birthday"><%= @trainer.birthday %></td>
+    </tr>
+    <tr>
+      <td>Вес: </td>
+      <td class="weight"><%= @trainer.weight %></td>
+    </tr>
+  </table>
 
 </div>
