--- a/app/views/devise/menu/_login_items.html.erb
+++ b/app/views/devise/menu/_login_items.html.erb
@@ -1,9 +1,9 @@
-<% if user_signed_in? %>
+<% if registrator_signed_in? %>
     <li>
-      <%= link_to('Logout', destroy_user_session_path, :method => :delete) %>
+      <%= link_to('Logout', destroy_registrator_session_path, :method => :delete) %>
     </li>
 <% else %>
     <li>
-      <%= link_to('Login', new_user_session_path)  %>
+      <%= link_to('Login', new_registrator_session_path)  %>
     </li>
 <% end %>
