--- a/app/views/devise/menu/_registration_items.html.erb
+++ b/app/views/devise/menu/_registration_items.html.erb
@@ -1,9 +1,9 @@
-<% if user_signed_in? %>
+<% if registrator_signed_in? %>
     <li>
-      <%= link_to('Edit registration', edit_user_registration_path) %>
+      <%= link_to('Edit registration', edit_registrator_registration_path) %>
     </li>
 <% else %>
     <li>
-      <%= link_to('Register', new_user_registration_path)  %>
+      <%= link_to('Register', new_registrator_registration_path)  %>
     </li>
 <% end %>
