--- a/app/views/devise/registrations/new.html.erb
+++ b/app/views/devise/registrations/new.html.erb
@@ -10,6 +10,10 @@
         <%= f.text_field :first_name, autofocus: true, class: "form-control" %>
       </div>
       <div class="form-group">
+        <%= f.label :middle_name %>
+        <%= f.text_field :middle_name, class: "form-control" %>
+      </div>
+      <div class="form-group">
         <%= f.label :last_name %>
         <%= f.text_field :last_name, class: "form-control" %>
       </div>
