--- a/app/views/people/_form.html.erb
+++ b/app/views/people/_form.html.erb
@@ -13,9 +13,9 @@
   <% end %>
 
   <div class="form-group">
-    <%= f.label :registrator, class: "col-sm-2 control-label" %>
+    <%= f.label :registrator_id, class: "col-sm-2 control-label" %>
     <div class="col-sm-10">
-      <%= f.text_field :registrator, class: "form-control" %>
+      <%= f.text_field :registrator_id, class: "form-control", value: current_registrator.id %>
     </div>
   </div>
   <div class="form-group">
