--- a/app/assets/stylesheets/application.scss
+++ b/app/assets/stylesheets/application.scss
@@ -1,5 +1,9 @@
+/*
+*= require bootstrap-datepicker3
+*/
 @import "bootstrap-sprockets";
 @import "bootstrap";
+
 @import "font-awesome";
 
 body { padding-top: 70px; }
