--- a/app/views/layouts/application.html.erb
+++ b/app/views/layouts/application.html.erb
@@ -37,6 +37,7 @@
           <% if current_registrator.present? %>
             <li><%= link_to 'People', people_path %></li>
           <% end %>
+          <li><%= link_to 'Events', events_path %></li>
         </ul>
       </div>
     </div>
