--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -26,4 +26,20 @@
   <dt>Details:</dt>
   <dd><%= @event.details %></dd>
 
+  <h3>Event structure</h3>
+
+  <% @event.team_structure.each do |structure| %>
+      <dt>Sportsmen:</dt>
+      <dd><%= structure.sportsmen %></dd>
+
+      <dt>Judges:</dt>
+      <dd><%= structure.judges %></dd>
+
+      <dt>Trainers:</dt>
+      <dd><%= structure.trainers %></dd>
+
+      <dt>Delegates:</dt>
+      <dd><%= structure.delegates %></dd>
+  <% end %>
+
 </dl>
