--- a/app/views/events/_form.html.erb
+++ b/app/views/events/_form.html.erb
@@ -27,13 +27,13 @@
   <div class="form-group">
     <%= f.label :start_date, class: "col-sm-2 control-label" %>
     <div class="col-sm-10">
-      <%= f.text_field :start_date, class: "datepicker form-control" %>
+      <%= f.date_select :start_date, class: "datepicker form-control" %>
     </div>
   </div>
   <div class="form-group">
     <%= f.label :end_date, class: "col-sm-2 control-label" %>
     <div class="col-sm-10">
-      <%= f.text_field :end_date, class: "datepicker form-control" %>
+      <%= f.date_select :end_date, class: "datepicker form-control" %>
     </div>
   </div>
   <div class="form-group">
