--- a/app/views/combats/_form.html.erb
+++ b/app/views/combats/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@combat, html: { class: "form-horizontal", role: "form" }) do |f| %>
+<%= form_for([@event, @combat], html: { class: "form-horizontal", role: "form" }) do |f| %>
   <% if @combat.errors.any? %>
     <div class="alert alert-danger alert-dismissable" role="alert">
       <button type="button" class="close" data-dismiss="alert"><span aria-hidden="true">&times;</span><span class="sr-only">Close</span></button>
@@ -12,12 +12,6 @@
     </div>
   <% end %>
 
-  <div class="form-group">
-    <%= f.label :event, class: "col-sm-2 control-label" %>
-    <div class="col-sm-10">
-      <%= f.text_field :event, class: "form-control" %>
-    </div>
-  </div>
   <div class="form-group">
     <%= f.label :name, class: "col-sm-2 control-label" %>
     <div class="col-sm-10">
@@ -60,12 +54,15 @@
       <%= f.check_box :team, class: "form-control" %>
     </div>
   </div>
-  <div class="form-group">
-    <%= f.label :sex, class: "col-sm-2 control-label" %>
-    <div class="col-sm-10">
-      <%= f.text_field :sex, class: "form-control" %>
+    <div class="form-group">
+      <%= f.label :sex, class: "col-sm-2 control-label" %>
+      <div class="col-sm-10">
+        <%= f.radio_button :sex, 'male' %>
+        <%= f.label 'Male' %>
+        <%= f.radio_button :sex, 'female' %>
+        <%= f.label 'Female' %>
+      </div>
     </div>
-  </div>
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
       <%= f.submit class: "btn btn-primary" %>
