--- a/app/views/combats/edit.html.erb
+++ b/app/views/combats/edit.html.erb
@@ -1,9 +1,9 @@
 <div class="page-header">
-  <%= link_to combats_path, class: 'btn btn-default' do %>
+  <%= link_to event_combats_path, class: 'btn btn-default' do %>
     <span class="glyphicon glyphicon-list-alt"></span>
     Back
   <% end %>
-  <%= link_to @combat, class: 'btn btn-primary' do %>
+  <%= link_to event_combat_path(@event, @combat), class: 'btn btn-primary' do %>
     <span class="glyphicon glyphicon-info-sign"></span>
     Show
   <% end %>
