--- a/app/views/combats/show.html.erb
+++ b/app/views/combats/show.html.erb
@@ -1,9 +1,9 @@
 <div class="page-header">
-  <%= link_to combats_path, class: 'btn btn-default' do %>
+  <%= link_to event_combats_path, class: 'btn btn-default' do %>
     <span class="glyphicon glyphicon-list-alt"></span>
     Back
   <% end %>
-  <%= link_to edit_combat_path(@combat), class: 'btn btn-primary' do %>
+  <%= link_to edit_event_combat_path(@event, @combat), class: 'btn btn-primary' do %>
     <span class="glyphicon glyphicon-pencil"></span>
     Edit
   <% end %>
@@ -11,8 +11,6 @@
 </div>
 
 <dl class="dl-horizontal">
-  <dt>Event:</dt>
-  <dd><%= @combat.event %></dd>
 
   <dt>Name:</dt>
   <dd><%= @combat.name %></dd>
