Created join-tables: people_registers & combats_people

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -7,6 +7,14 @@
     <span class="glyphicon glyphicon-pencil"></span>
     Edit
   <% end %>
+  <%= link_to new_event_combat_path(@event), class: 'btn btn-info' do %>
+      <span class="glyphicon glyphicon-plus"></span>
+      Добавить категорию
+  <% end %>
+  <%= link_to new_event_register_path(@event), class: 'btn btn-success' do %>
+      <span class="glyphicon glyphicon-plus"></span>
+      Подать заявку
+  <% end %>
   <h1>Show event</h1>
 </div>
 
@@ -41,3 +49,10 @@
   <dd><%= @event.team_structure['delegates'] %></dd>
 
 </dl>
+
+<h3>Registers(заявки)</h3>
+<p>
+  <% @event.registers.each do |register| %>
+    <%= link_to register.name + ', ', event_register_path(@event, register) %>
+  <% end %>
+</p>
