--- a/app/views/teams/edit.html.erb
+++ b/app/views/teams/edit.html.erb
@@ -1,9 +1,9 @@
 <div class="page-header">
-  <%= link_to teams_path, class: 'btn btn-default' do %>
+  <%= link_to event_combat_teams_path(@event, @combat), class: 'btn btn-default' do %>
     <span class="glyphicon glyphicon-list-alt"></span>
     Back
   <% end %>
-  <%= link_to @team, class: 'btn btn-primary' do %>
+  <%= link_to event_combat_team_path(@event, @combat, @team), class: 'btn btn-primary' do %>
     <span class="glyphicon glyphicon-info-sign"></span>
     Show
   <% end %>
