--- a/app/views/people/_form.html.erb
+++ b/app/views/people/_form.html.erb
@@ -48,7 +48,7 @@
   <div class="form-group">
     <%= f.label :kind, class: "col-sm-2 control-label" %>
     <div class="col-sm-10">
-      <%= f.text_field :kind, class: "form-control" %>
+      <%= f.select(:kind, Person::KIND.to_a.map{ |w| w.capitalize }, {}, { class: "form-control" }) %>
     </div>
   </div>
   <div class="form-group">
