--- a/app/views/registers/new.html.erb
+++ b/app/views/registers/new.html.erb
@@ -1,9 +1,9 @@
 <div class="page-header">
   <%= link_to event_registers_path, class: 'btn btn-default' do %>
     <span class="glyphicon glyphicon-list-alt"></span>
-    Back
+    Назад
   <% end %>
-  <h1>New register</h1>
+  <h1>Новая заявка</h1>
 </div>
 
 <%= render 'form' %>
