--- a/app/views/registers/_form.html.erb
+++ b/app/views/registers/_form.html.erb
@@ -19,6 +19,12 @@
     </div>
   </div>
   <div class="form-group">
+    <%= f.label :people, class: "col-sm-2 control-label" %>
+    <div class="col-sm-10 checkbox-list">
+      <%= f.collection_check_boxes(:person_ids, @sportsmans, :id, :full_name) %>
+    </div>
+  </div>
+  <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
       <%= f.submit class: "btn btn-primary" %>
     </div>
