--- a/app/views/registers/show.html.erb
+++ b/app/views/registers/show.html.erb
@@ -12,12 +12,20 @@
 
 <dl class="dl-horizontal">
   <dt>Registrator:</dt>
-  <dd><%= @register.registrator.id %></dd>
+  <dd><%= @register.registrator.last_name %></dd>
 
   <dt>Event:</dt>
-  <dd><%= @register.event.id %></dd>
+  <dd><%= @register.event.name %></dd>
 
   <dt>Name:</dt>
   <dd><%= @register.name %></dd>
 
 </dl>
+
+<h3>Участники</h3>
+
+<% @sportsmans.each_with_index do |sportsman, index| %>
+  <p>
+    <%= index+1 %> <%= sportsman.first_name %> <%= sportsman.last_name %>
+  </p>
+<% end %>
