--- a/app/views/registers/_form.html.erb
+++ b/app/views/registers/_form.html.erb
@@ -21,7 +21,7 @@
   <div class="form-group">
     <%= f.label :people, class: "col-sm-2 control-label" %>
     <div class="col-sm-10 checkbox-list">
-      <%= f.collection_check_boxes(:person_ids, @sportsmans, :id, :full_name) %>
+      <%= f.collection_check_boxes(:person_ids, @people || [], :id, :full_name) %>
     </div>
   </div>
   <div class="form-group">
