--- a/app/views/registers/edit.html.erb
+++ b/app/views/registers/edit.html.erb
@@ -1,13 +1,13 @@
 <div class="page-header">
   <%= link_to event_registers_path, class: 'btn btn-default' do %>
     <span class="glyphicon glyphicon-list-alt"></span>
-    Back
+    Назад
   <% end %>
   <%= link_to event_register_path(@event, @register), class: 'btn btn-primary' do %>
     <span class="glyphicon glyphicon-info-sign"></span>
-    Show
+    Показати
   <% end %>
-  <h1>Editing register</h1>
+  <h1>Редагування заявки</h1>
 </div>
 
 <%= render 'form' %>
