--- a/app/views/registers/new.html.erb
+++ b/app/views/registers/new.html.erb
@@ -3,7 +3,7 @@
     <span class="glyphicon glyphicon-list-alt"></span>
     Назад
   <% end %>
-  <h1>Новая заявка</h1>
+  <h1>Нова заявка</h1>
 </div>
 
 <%= render 'form' %>
