--- a/app/views/registers/index.html.erb
+++ b/app/views/registers/index.html.erb
@@ -1,19 +1,19 @@
 <div class="page-header">
   <%= link_to new_event_register_path, class: 'btn btn-primary' do %>
     <span class="glyphicon glyphicon-plus"></span>
-    New Register
+    Нова заявка
   <% end %>
-  <h1>Listing registers</h1>
+  <h1>Заявки на змагання</h1>
 </div>
 
 <div class="table-responsive">
   <table class="table table-striped table-bordered table-hover">
     <thead>
       <tr>
-            <th>Registrator</th>
-            <th>Event</th>
-            <th>Name</th>
-            <th></th>
+        <th>Реєстратор</th>
+        <th>Подія</th>
+        <th>Назва</th>
+        <th></th>
         <th></th>
         <th></th>
       </tr>
@@ -21,12 +21,12 @@
 
     <tbody>
       <%= content_tag_for(:tr, @registers) do |register| %>
-            <td><%= register.registrator.id %></td>
-            <td><%= register.event.id %></td>
-            <td><%= register.name %></td>
-            <td><%= link_to 'Show', event_register_path(@event, register) %></td>
-        <td><%= link_to 'Edit', edit_event_register_path(@event, register) %></td>
-        <td><%= link_to 'Destroy', event_register_path(@event, register), method: :delete, data: { confirm: 'Are you sure?' } %></td>
+        <td><%= register.registrator.first_name %> <%= register.registrator.last_name %></td>
+        <td><%= register.event.name %></td>
+        <td><%= register.name %></td>
+        <td><%= link_to 'Показати', event_register_path(@event, register) %></td>
+        <td><%= link_to 'Редагувати', edit_event_register_path(@event, register) %></td>
+        <td><%= link_to 'Видалити', event_register_path(@event, register), method: :delete, data: { confirm: 'Ви впевнені?' } %></td>
       <% end %>
     </tbody>
   </table>
