--- a/app/views/registers/show.html.erb
+++ b/app/views/registers/show.html.erb
@@ -20,9 +20,37 @@
 </dl>
 
 <h3>Учасники</h3>
-
-<% @people.each_with_index do |person, index| %>
-  <p>
-    <%= index+1 %> <%= person.full_name%>
-  </p>
-<% end %>
+<div class="table-responsive">
+  <table class="table table-striped table-hover">
+    <thead>
+      <tr>
+        <th>#</th>
+        <th>ПІБ</th>
+        <% @event.combats.each do |combat| %>
+          <th><%= combat.name %></th>
+        <% end %>
+      </tr>
+    </thead>
+    <tbody>
+      <% @people.each_with_index do |person, index| %>
+        <tr>
+          <td>
+            <%= index+1 %>
+          </td>
+          <td>
+            <%= person.full_name %>
+          </td>
+            <% @event.combats.each do |combat| %>
+              <td>
+                <% if person.combats.include?(combat) %>
+                  +
+                <% else %>
+                  -
+                <% end %>
+              </td>
+            <% end %>
+        </tr>
+      <% end %>
+    </tbody>
+  </table>
+</div>
