select_combats in register, foundations laid

--- a/app/views/events/show.html.erb
+++ b/app/views/events/show.html.erb
@@ -57,7 +57,7 @@
   <% end %>
 </p>
 
-<h3>Registers(заявки)</h3>
+<h3><%= link_to "Заявки", event_registers_path(@event) %> (<%= @event.registers.count %>)</h3>
 <p>
   <% @event.registers.each do |register| %>
     <%= link_to register.name + ', ', event_register_path(@event, register) %>
