--- a/app/views/registers/show.html.erb
+++ b/app/views/registers/show.html.erb
@@ -20,6 +20,7 @@
 </dl>
 
 <h3>Учасники</h3>
+<%= link_to "Розділити по категоріям", event_select_combats_path(@event, @register) %>
 <div class="table-responsive">
   <table class="table table-striped table-hover">
     <thead>
