--- a/app/views/registers/_form.html.erb
+++ b/app/views/registers/_form.html.erb
@@ -26,7 +26,7 @@
   </div>
   <div class="form-group">
     <div class="col-sm-offset-2 col-sm-10">
-      <%= f.submit value: "Створити заявку", class: "btn btn-primary" %>
+      <%= f.submit value: "Створити заявку", class: "btn btn-primary pull-right" %>
     </div>
   </div>
 <% end %>
