--- a/app/views/registers/show.html.erb
+++ b/app/views/registers/show.html.erb
@@ -20,7 +20,6 @@
 </dl>
 
 <h3>Учасники</h3>
-<%= link_to "Розділити по категоріям", event_select_combats_path(@event, @register) %>
 <div class="table-responsive">
   <table class="table table-striped table-hover">
     <thead>
@@ -50,7 +49,25 @@
                 <% end %>
               </td>
             <% end %>
+            <td>
+              <%= link_to "визначити категорію", '#', person_id: person, "data-target": "#modal_role_#{person.id}", "data-toggle": "modal"  %>
+            </td>
         </tr>
+
+        <div id='<%= "modal_role_#{person.id}" %>'class="modal fade">
+          <div class="modal-dialog">
+            <div class="modal-content">
+              <div class="modal-header">
+                <button type="button" class="close" data-dismiss="modal" aria-hidden="true">×</button>
+                <h4 class="modal-title">Визначення категорії для: <%= person.full_name %></h4>
+              </div>
+              <div class="modal-body">
+                <%= render "form_select_combat", person: person %>
+              </div>
+            </div>
+          </div>
+        </div>
+
       <% end %>
     </tbody>
   </table>
