--- a/app/views/people/show.html.erb
+++ b/app/views/people/show.html.erb
@@ -11,8 +11,8 @@
 </div>
 
 <dl class="dl-horizontal">
-  <dt>Registrator:</dt>
-  <dd><%= "#{@person.registrator.last_name} #{@person.registrator.first_name}" %></dd>
+  <dt>User:</dt>
+  <dd><%= "#{@person.user.last_name} #{@person.user.first_name}" %></dd>
 
   <dt>First name:</dt>
   <dd><%= @person.first_name %></dd>
