--- a/app/views/people/index.html.erb
+++ b/app/views/people/index.html.erb
@@ -10,7 +10,7 @@
   <table class="table table-striped table-bordered table-hover">
     <thead>
       <tr>
-            <th>Registrator</th>
+            <th>User</th>
             <th>First name</th>
             <th>Middle name</th>
             <th>Last name</th>
@@ -26,7 +26,7 @@
 
     <tbody>
       <%= content_tag_for(:tr, @people) do |person| %>
-            <td><%= person.registrator.last_name %></td>
+            <td><%= person.user.last_name %></td>
             <td><%= person.first_name %></td>
             <td><%= person.middle_name %></td>
             <td><%= person.last_name %></td>
