--- a/app/views/registers/show.html.erb
+++ b/app/views/registers/show.html.erb
@@ -12,7 +12,7 @@
 
 <dl class="dl-horizontal">
   <dt>Реєстратор:</dt>
-  <dd><%= @register.registrator.last_name %></dd>
+  <dd><%= @register.user.last_name %></dd>
 
   <dt>Подія:</dt>
   <dd><%= @register.event.name %></dd>
