--- a/app/views/pages/index.html.erb
+++ b/app/views/pages/index.html.erb
@@ -1,4 +1,37 @@
-<div class="page-header">
-  <h1>Pages#index</h1>
+<div class="row">
+  <% @events.each do |event| %>
+  <div class="col-sm-4">
+    <h3><%= event.name %></h3>
+    <p>
+      <strong>Address:</strong><br>
+      <%= event.address %><br>
+      <strong>Registration start at:</strong><br>
+      <%= event.start_date %><br>
+      <strong>Registation closed at:</strong><br>
+      <%= event.end_date %><br>
+    </p>
+    <!-- Button trigger modal -->
+    <button type="button" class="btn btn-primary" data-toggle="modal" data-target="#<%= dom_id(event) %>">
+      Details
+    </button>
+
+    <!-- Modal -->
+    <div class="modal fade" id="<%= dom_id(event) %>" tabindex="-1" role="dialog" aria-labelledby="<%= dom_id(event) %>Label">
+      <div class="modal-dialog" role="document">
+        <div class="modal-content">
+          <div class="modal-header">
+            <button type="button" class="close" data-dismiss="modal" aria-label="Close"><span aria-hidden="true">&times;</span></button>
+            <h4 class="modal-title" id="<%= dom_id(event) %>Label"><%= event.name %></h4>
+          </div>
+          <div class="modal-body">
+            <%= event.details %>
+          </div>
+          <div class="modal-footer">
+            <button type="button" class="btn btn-default" data-dismiss="modal">Close</button>
+          </div>
+        </div>
+      </div>
+    </div>
+  </div>
+  <% end %>
 </div>
-<p>Find me in app/views/pages/index.html.erb</p>
